# audify

./: .gitignore  Cargo.toml  Justfile  README.md  audio.rs  build.rs
audify/: Cargo.toml
examples/: audio.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: audify_rs.udl  core.rs  error.rs  extractor.rs  languages.rs  lib.rs
