[package]
name = "audify-rs"
description = "convert PDF to audio files"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]
name = "audify_rs"

[dependencies]
extractous = "0.3.0"
pdf-extract = "0.9.0"
piper-rs = "0.1.9"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
uniffi = { version = "0.29.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.2", features = ["build"] }
